changed the seo a bit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Jeremy Boka | New Yorker, Veteran, Columbia MBA</title>
-    <meta name="description" content="Jeremy Boka - A New Yorker, Veteran, Columbia MBA, and Cornell B.S. graduate. Connect on LinkedIn.">
+    <meta name="description" content="Jeremy Boka - New Yorker, Veteran, Columbia MBA, Cornell B.S.">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQCSKQ22DG"></script>
     <script>
@@ -92,3 +92,4 @@
 
 </body>
 </html>
+
