--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         :root {
             --background-color: #000000; /* Black */
             --text-color: #FAFAFA;       /* Off-white */
+            --footer-text-color: rgba(250, 250, 250, 0.7); /* Dimmer white for footer */
         }
 
         html, body {
@@ -70,11 +71,17 @@
             line-height: 1.5;
         }
 
-        #location-info {
-            font-size: 1.2rem;
+        /* ** NEW STYLE ** For the footer at the bottom of the page */
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 1.5rem;
+            text-align: center;
+            font-size: 1rem;
+            color: var(--footer-text-color);
             line-height: 1.6;
-            margin-bottom: 0;
-            min-height: 4rem; /* Reserve space to prevent layout shift */
         }
 
         /* Responsive font sizes */
@@ -85,8 +92,8 @@
             p {
                 font-size: 2rem;
             }
-            #location-info {
-                font-size: 1.5rem;
+            footer {
+                font-size: 1.2rem;
             }
         }
     </style>
@@ -97,9 +104,9 @@
         <h1><a href="https://www.linkedin.com/in/jeremyboka" target="_blank" rel="noopener noreferrer">Jeremy Boka</a></h1>
         
         <p>New Yorker, Veteran, Columbia MBA, Cornell B.S.</p>
-
-        <div id="location-info"></div>
     </main>
+
+    <footer id="location-info"></footer>
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
@@ -122,7 +129,8 @@
                     timeLine = 'Your local time is the same as in NYC.';
                 } else {
                     const hours = data.timeDifference === 1 ? 'hour' : 'hours';
-                    timeLine = `Your local time is roughly ${data.timeDifference} ${hours} ${data.aheadOrBehind} NYC.`;
+                    // ** TEXT CHANGE ** Removed the word "roughly"
+                    timeLine = `Your local time is ${data.timeDifference} ${hours} ${data.aheadOrBehind} NYC.`;
                 }
             }
             
