--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         }
 
         p {
-            /* ** STYLE CHANGE ** Reduced font size to prevent awkward wrapping on mobile */
             font-size: 1.5rem; 
             letter-spacing: 1px;
             margin-top: 0;
@@ -78,11 +77,15 @@
             left: 0;
             width: 100%;
             padding: 1.5rem;
-            /* ** STYLE FIX ** This ensures the text inside the footer is centered */
-            text-align: center;
-            font-size: 1rem;
             color: var(--footer-text-color);
+            font-size: 1rem;
             line-height: 1.6;
+
+            /* ** CENTERING FIX ** Using Flexbox for robust centering */
+            display: flex;
+            flex-direction: column; /* Stacks lines vertically */
+            justify-content: center; /* Centers content on the main axis (vertical) */
+            align-items: center;     /* Centers content on the cross axis (horizontal) */
         }
 
         /* Responsive font sizes */
@@ -91,7 +94,6 @@
                 font-size: 8rem;
             }
             p {
-                /* Font size increases on larger screens */
                 font-size: 2rem;
             }
             footer {
