--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Jeremy Boka | New Yorker, Veteran, Columbia MBA</title>
     <meta name="description" content="Jeremy Boka - New Yorker, Veteran, Columbia MBA, Cornell B.S.">
 
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQCSKQ22DG"></script>
     <script>
