--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         }
 
         h1 a:hover {
-            text-shadow: 0 0 8px var(--text-color);
+            /* ** STYLE CHANGE ** Layered text-shadow for a more pronounced glow */
+            text-shadow: 0 0 5px var(--text-color), 0 0 15px var(--text-color);
         }
 
         p {
@@ -84,7 +85,7 @@
             line-height: 1.5;
         }
         
-        /* ** NEW ** Styles for the new link and its hover effect */
+        /* ** NEW ** Added styles for the new link and its hover effect */
         p a {
             color: inherit;
             text-decoration: none;
@@ -92,7 +93,8 @@
         }
 
         p a:hover {
-            text-shadow: 0 0 8px var(--text-color);
+            /* ** STYLE CHANGE ** Applied the same pronounced glow */
+            text-shadow: 0 0 5px var(--text-color), 0 0 15px var(--text-color);
         }
         
         footer {
